<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>data_tamer_tools</name>
  <version>0.3.1</version>
  <description>Set of tools for using Foxglove with data tamer</description>
  <maintainer email="jlack1987@gmail.com">Jordan Lack</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>data_tamer_cpp</depend>
  <depend>data_tamer_msgs</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>rclcpp</depend>
  <depend>mcap_vendor</depend>
  <depend>rclcpp_components</depend>
  <depend>rcl_interfaces</depend>
  <depend>protobuf-dev</depend>
  <depend>backward_ros</depend>
  <depend>foxglove_sdk_vendor</depend>
  <depend>geographic_msgs</depend>
  <depend>sensor_msgs</depend>
  <test_depend>ament_index_cpp</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_lint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
